<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/introBackground"
    android:orientation="vertical"
    tools:context="com.example.android.meetthehero.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/mainImageWeight"
        android:scaleType="centerCrop"
        android:src="@drawable/mainimage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/meetTheHeroWeight"
        android:background="@color/introButton"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/quizName"
        android:textColor="@color/meetTheHero"
        android:textSize="@dimen/quizName"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@integer/pickHeroMargin"
        android:layout_marginRight="@integer/pickHeroMargin"
        android:layout_weight="@integer/enterNameWeight"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/editTextName"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/meetTheHero"
        android:textSize="@dimen/enterName"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/storylineWeight"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/storyline"
        android:textColor="@color/meetTheHero"
        android:textSize="@dimen/storyline"
        android:textStyle="bold" />


    <Button
        android:id="@+id/pick_hero_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@integer/pickHeroMargin"
        android:layout_weight="@integer/pickHeroButtonWeight"
        android:background="@color/introButton"
        android:fontFamily="serif"
        android:text="@string/pickHero"
        android:textColor="@color/meetTheHero"
        android:textSize="@dimen/pickHero"
        android:textStyle="bold" />
</LinearLayout>

