<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.android.meetthehero.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@color/headerBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/chosen_hero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/supermanname" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/answerBackground"
            android:gravity="center"
            android:text="@string/pro"
            android:textAllCaps="true"
            android:textColor="@color/questionColor"
            android:textSize="@dimen/headerStage"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/questionWeigth"
            android:background="@color/questionBackground"
            android:fontFamily="serif"
            android:gravity="center_vertical"
            android:paddingLeft="@integer/padQuestions"
            android:paddingRight="@integer/padQuestions"
            android:paddingTop="@integer/padTopQuestions"
            android:text="@string/question7_batman"
            android:textColor="@color/questionColor"
            android:textSize="@dimen/question"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/answerRadio4Weigth"
            android:background="@color/answerBackground"
            android:paddingLeft="@integer/padAnswers"
            android:paddingRight="@integer/padAnswers">

            <com.example.android.meetthehero.ToggleButtonGroupTableLayout
                android:id="@+id/Question7_group_batman"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/answer_father"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/answer7.1_batman"
                        android:textColor="@color/answerColor"
                        android:textSize="@dimen/answers" />

                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/answer_butler"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/answer7.2_batman"
                        android:textColor="@color/answerColor"
                        android:textSize="@dimen/answers" />
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/answer_enemy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/answer7.3_batman"
                        android:textColor="@color/answerColor"
                        android:textSize="@dimen/answers" />


                </TableRow>

            </com.example.android.meetthehero.ToggleButtonGroupTableLayout>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/questionWeigth"
            android:background="@color/questionBackground"
            android:fontFamily="serif"
            android:gravity="center_vertical"
            android:paddingLeft="@integer/padQuestions"
            android:paddingRight="@integer/padQuestions"
            android:paddingTop="@integer/padTopQuestions"
            android:text="@string/question8_batman"
            android:textColor="@color/questionColor"
            android:textSize="@dimen/question"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/answerRadio5Weigth"
            android:background="@color/answerBackground"
            android:orientation="vertical"
            android:paddingLeft="@integer/padAnswers"
            android:paddingRight="@integer/padAnswers">

            <com.example.android.meetthehero.ToggleButtonGroupTableLayout
                android:id="@+id/Question8_group_batman"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/answer_25"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/answer8.1_batman"
                        android:textColor="@color/answerColor"
                        android:textSize="@dimen/answers" />

                    <RadioButton
                        android:id="@+id/answer_30"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/answer8.2_batman"
                        android:textColor="@color/answerColor"
                        android:textSize="@dimen/answers" />

                    <RadioButton
                        android:id="@+id/answer_35"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:text="@string/answer8.3_batman"
                        android:textColor="@color/answerColor"
                        android:textSize="@dimen/answers" />

                </TableRow>


            </com.example.android.meetthehero.ToggleButtonGroupTableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/answerBackground" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@color/headerBackground"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/finish_button_batman"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@integer/nextButtonsMargins"
            android:layout_weight="3"
            android:background="@color/questionBackground"
            android:fontFamily="serif"
            android:text="@string/proNext"
            android:textAllCaps="false"
            android:textColor="@color/questionColor"
            android:textSize="@dimen/nextButtons"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>

